fixed overlap with absolute on the buttons for making music

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -177,11 +177,6 @@ input[type="button"]:hover, .radioButton:hover, input[type="button"]:focus, .rad
 	height: 10vh;
 }
 
-#audioControlsSubmitButtons {
-	position: absolute;
-	bottom: 15px;
-}
-
 /* Loop editor stuff */
 #loopEditorWrapper {
 	grid-area: loopEditor;
